--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -15,14 +15,14 @@ const { selectedItem } = Astro.props;
     <a href="/" class="w-nav-brand" aria-label="home">
       <div class="niv-data">
         <img
-          src="/assets/sam.jpg"
+          src="/assets/john2.png"
           loading="eager"
           alt="Profile picture"
           class="niv-image"
         />
         <div>
-          <div class="label-white">Sam Bernstein</div>
-          <div class="label-gray">Software Engineer</div>
+          <div class="label-white">Jonathan Olbes</div>
+          <div class="label-gray">FullStack Web Developer & Cibersecurity</div>
         </div>
       </div>
     </a>
@@ -57,7 +57,7 @@ const { selectedItem } = Astro.props;
           alt=""
           class="nav-link-image"
         />
-        <div>Software development</div>
+        <div>Web development</div>
       </a>
       <a
         href="/devops"
