--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Sidebar from "../components/Sidebar.astro";
 <!DOCTYPE html>
 <html
 >
-  <Header title="Sam Bernstein" />
+  <Header title="Jonathan Olbes" />
   <body>
     <div class="content">
       <Sidebar selectedItem="home" />
@@ -15,12 +15,12 @@ import Sidebar from "../components/Sidebar.astro";
         <div class="container">
           <main class="fold-content-container">
             <div class="fold-content">
-              <h1>Hi, I'm Sam.<br />I build things for the web.</h1>
+              <h1>Hi, I'm John.<br />I build things for the web.</h1>
               <p class="lead">
-                Experienced backend developer and cloud architect. A proactive team member dedicated to continuous learning, problem-solving, and aiding teammates in achieving quicker outcomes.
+                Experienced Fullstack Web Developer. A proactive team member dedicated to continuous learning, problem-solving, and aiding teammates in achieving quicker outcomes.
               </p>
             </div>
-            <a href="mailto:sam@overview.co.il	" class="button w-button">Contact</a>
+            <a href="mailto:orbyz.sec@gmail.com	" class="button w-button">Contact</a>
           </main>
           <div class="projects-section">
             <!-- Software Development -->
@@ -40,13 +40,11 @@ import Sidebar from "../components/Sidebar.astro";
                     <div class="single-chip small-chip">Node.js</div>
                     <div class="single-chip small-chip">MongoDB</div>
                     <div class="single-chip small-chip">Heroku</div>
-                    <div class="single-chip small-chip">RabbitMQ</div>
                     <div class="single-chip small-chip">Express.js</div>
                     <div class="single-chip small-chip">TypeScript</div>
                     <div class="single-chip small-chip">NestJS</div>
-                    <div class="single-chip small-chip">Angular</div>
                     <div class="single-chip small-chip">Postgres</div>
-                    <div class="single-chip small-chip">Linode</div>
+                    <div class="single-chip small-chip">Python</div>
                   </div>
                 </div>
               </div>
@@ -63,19 +61,14 @@ import Sidebar from "../components/Sidebar.astro";
                 <div class="tech-tools-container">
                   <div class="mini-label-white gray-color">Technologies &amp; tools</div>
                   <div class="chips-container chips-container-small-width">
-                    <div class="single-chip small-chip">Terraform</div>
                     <div class="single-chip small-chip">Azure</div>
                     <div class="single-chip small-chip">AWS</div>
                     <div class="single-chip small-chip">Docker</div>
                     <div class="single-chip small-chip">Kubernetes</div>
                     <div class="single-chip small-chip">GitLab CI/CD</div>
-                    <div class="single-chip small-chip">RKE</div>
                     <div class="single-chip small-chip">Node.js</div>
-                    <div class="single-chip small-chip">RabbitMQ</div>
                     <div class="single-chip small-chip">Linux</div>
                     <div class="single-chip small-chip">Bash</div>
-                    <div class="single-chip small-chip">Grafana</div>
-                    <div class="single-chip small-chip">Prometheus</div>
                   </div>
                 </div>
               </div>
