--- a/src/pages/software-development.astro
+++ b/src/pages/software-development.astro
@@ -4,9 +4,9 @@ import Project from "../components/Project.astro";
 import Sidebar from "../components/Sidebar.astro";
 const projects = [
   {
-    title: "CodeCraft",
+    title: "OrByZ Studio",
     desc: [
-      "Developed a large-scale e-commerce platform for indie game developers",
+      "Developed a website for the startup focused on branding, digital marketing, and cybersecurity.",
       "Designed and implemented UI, backend, and database architecture",
       "Contributed to RESTful API and GraphQL design",
       "Led a team of three engineers for several months"
