Changes Logo, Names

--- a/src/pages/software-development.astro
+++ b/src/pages/software-development.astro
@@ -6,12 +6,12 @@ const projects = [
   {
     title: "OrByZ Studio",
     desc: [
-      "Developed a website for the startup focused on branding, digital marketing, and cybersecurity.",
+      "Developed a website for the startup focused on branding, digital marketing, web development and cybersecurity.",
       "Designed and implemented UI, backend, and database architecture",
       "Contributed to RESTful API and GraphQL design",
-      "Led a team of three engineers for several months"
+      "CEO"
     ],
-    tech: ["React", "Next.js", "Node.js", "MongoDB", "Heroku"]
+    tech: ["Astro","React", "Node.js", "MongoDB", "Vercel"]
   },
   {
     title: "CloudMason",
@@ -37,7 +37,7 @@ const projects = [
 <!DOCTYPE html>
 <html
 >
-  <Header title="Software Development | Sam Bernstein" />
+  <Header title="Software Development | Jonathan Olbes" />
   <body>
     <div class="content">
         <Sidebar selectedItem="software-development" />
