--- a/src/pages/devops.astro
+++ b/src/pages/devops.astro
@@ -37,7 +37,7 @@ const projects = [
 <!DOCTYPE html>
 <html
 >
-  <Header title="DevOps | Sam Bernstein" />
+  <Header title="DevOps | Jonathan Olbes" />
   <body>
     <div class="content">
         <Sidebar selectedItem="devops" />
