--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Sidebar from "../components/Sidebar.astro";
 <!DOCTYPE html>
 <html
 >
-  <Header title="Jonathan Olbes" />
+  <Header title="Jonathan Olbes | Web Developer" />
   <body>
     <div class="content">
       <Sidebar selectedItem="home" />
@@ -36,13 +36,13 @@ import Sidebar from "../components/Sidebar.astro";
                   <div class="mini-label-white gray-color">Technologies &amp; tools</div>
                   <div class="chips-container chips-container-small-width">
                     <div class="single-chip small-chip">React</div>
+                    <div class="single-chip small-chip">Astro</div>
                     <div class="single-chip small-chip">Next.js</div>
                     <div class="single-chip small-chip">Node.js</div>
                     <div class="single-chip small-chip">MongoDB</div>
                     <div class="single-chip small-chip">Heroku</div>
                     <div class="single-chip small-chip">Express.js</div>
                     <div class="single-chip small-chip">TypeScript</div>
-                    <div class="single-chip small-chip">NestJS</div>
                     <div class="single-chip small-chip">Postgres</div>
                     <div class="single-chip small-chip">Python</div>
                   </div>
