--- a/src/pages/personal-projects.astro
+++ b/src/pages/personal-projects.astro
@@ -33,7 +33,7 @@ const projects = [
 <!DOCTYPE html>
 <html
 >
-  <Header title="Personal Projects | Sam Bernstein" />
+  <Header title="Personal Projects | Jonathan Olbes" />
   <body>
     <div class="content">
         <Sidebar selectedItem="personal-projects" />
